src/test/ui/consts/const-eval/erroneous-const.stderr
warning: this operation will panic at runtime
  --> $DIR/erroneous-const.rs:6:22
   |
LL |     const VOID: () = [()][2];
   |                      ^^^^^^^ index out of bounds: the length is 1 but the index is 2
   |
note: the lint level is defined here
  --> $DIR/erroneous-const.rs:2:20
   |
LL | #![warn(const_err, unconditional_panic)]
   |                    ^^^^^^^^^^^^^^^^^^^

warning: any use of this value will cause an error
  --> $DIR/erroneous-const.rs:6:22
   |
LL |     const VOID: () = [()][2];
   |     -----------------^^^^^^^-
   |                      |
   |                      index out of bounds: the length is 1 but the index is 2
   |
note: the lint level is defined here
  --> $DIR/erroneous-const.rs:2:9
   |
LL | #![warn(const_err, unconditional_panic)]
   |         ^^^^^^^^^

error[E0080]: could not evaluate static initializer
  --> $DIR/erroneous-const.rs:12:17
   |
LL |         let _ = PrintName::<T>::VOID;
   |                 ^^^^^^^^^^^^^^^^^^^^
   |                 |
   |                 referenced constant has errors
   |                 inside `no_codegen::<i32>` at $DIR/erroneous-const.rs:12:17
...
LL | pub static FOO: () = no_codegen::<i32>();
   |                      ------------------- inside `FOO` at $DIR/erroneous-const.rs:16:22

error: aborting due to previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0080`.
